# Reversi

./: AIPlayer.cpp  AIPlayer.h  Board.cpp  Board.h  CMakeLists.txt  ConsoleView.cpp  ConsoleView.h  Controller.cpp  Controller.h  GameModel.cpp  GameModel.h  HumanPlayer.cpp  HumanPlayer.h  Player.h  PlayerType.h  README.md  ReversiMenu.cpp  ReversiMenu.h  View.h  config.txt  main.cpp  makefile
Server/: CMakeLists.txt  Server.cpp  Server.h  main.cpp
include/: AIPlayer.h  Board.h  Client.h  ConsoleView.h  Controller.h  GameModel.h  HumanPlayer.h  NetPlayer.h  Player.h  ReversiMenu.h  View.h
server/: CMakeLists.txt  Server.cpp  Server.h  main.cpp
src/: AIPlayer.cpp  Board.cpp  Client.cpp  ConsoleView.cpp  Controller.cpp  GameModel.cpp  HumanPlayer.cpp  NetPlayer.cpp  ReversiMenu.cpp  Server.cpp  Server.h  main.cpp  makefile
src/Client/include/: AIPlayer.h  Board.h  Client.h  ConsoleView.h  Controller.h  GameMaker.h  HumanPlayer.h  Logging.h  NetPlayer.h  Player.h  ReversiMenu.h
src/Client/src/: Client.cpp  ConsoleView.cpp  Controller.cpp  GameMaker.cpp  GameModel.cpp  HumanPlayer.cpp  NetPlayer.cpp  ReversiMenu.cpp  main.cpp
src/Client/tests/: CMakeLists.txt
src/Client/tests/ReversiTests/: AIPlayer_test.cpp  Board_test.cpp  GameModel_test.cpp  HumanPlayer_test.cpp
src/Server/: CMakeLists.txt  CloseCommand.cpp  CloseCommand.h  Command.h  CommandsManager.cpp  CommandsManager.h  GameList.cpp  GameList.h  GameSession.h  JoinCommand.cpp  JoinCommand.h  ListGamesCommand.cpp  ListGamesCommand.h  PlayCommand.cpp  PlayCommand.h  Server.cpp  Server.h  StartCommand.cpp  main.cpp
src/Server/include/: CloseCommand.h  Command.h  CommandsManager.h  GameList.h  GameSession.h  HandlerStructs.h  JoinCommand.h  ListGamesCommand.h  PlayCommand.h  Server.h  StartCommand.h  Task.h  ThreadPool.h
src/Server/src/: CloseCommand.cpp  CommandsManager.cpp  GameList.cpp  JoinCommand.cpp  ListGamesCommand.cpp  PlayCommand.cpp  Server.cpp  StartCommand.cpp  ThreadPool.cpp  main.cpp
tests/: CMakeLists.txt
tests/ReversiTests/: AIPlayer_test.cpp  Board_test.cpp  CMakeLists.txt  GameModel_test.cpp  HumanPlayer_test.cpp  main.cpp
