cmake_minimum_required(VERSION 3.8)
project(Reversi)
set(CMAKE_CXX_STANDARD 98)
set(CMAKE_CXX_FLAGS -pthread)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "../../../exe")
add_executable(Server main.cpp Server.cpp Server.h Command.h CommandsManager.cpp CommandsManager.h PlayCommand.cpp PlayCommand.h CloseCommand.cpp CloseCommand.h GameSession.h ListGamesCommand.cpp ListGamesCommand.h StartCommand.cpp StartCommand.h JoinCommand.cpp JoinCommand.h GameList.cpp GameList.h)